k8s/SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-server
  labels:
    app: todo-list-server
    dev.expose/conf: "true"
spec:
  selector:
    app: todo-list-server
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
