k8s/INGRESS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "todo.laufer.host"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todo-list-server
                port:
                  number: 8080
